--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,68 @@
 alabaster==0.7.12
+amqp==5.2.0
 anaconda-client==1.7.2
 anaconda-navigator==1.10.0
 anaconda-project==0.8.3
 aniso8601==9.0.1
+APScheduler==3.10.4
 argh==0.26.2
+argon2-cffi @ file:///C:/ci/argon2-cffi_1596828585465/work
+asgiref @ file:///tmp/build/80754af9/asgiref_1625643473416/work
+asn1crypto @ file:///tmp/build/80754af9/asn1crypto_1596577642040/work
+astroid @ file:///C:/ci/astroid_1592487315634/work
 astropy==4.0.2
 async-generator==1.10
 atomicwrites==1.4.0
+attrs @ file:///tmp/build/80754af9/attrs_1604765588209/work
+autopep8 @ file:///tmp/build/80754af9/autopep8_1596578164842/work
+Babel @ file:///tmp/build/80754af9/babel_1605108370292/work
 backcall==0.2.0
 backports.functools-lru-cache==1.6.1
 backports.shutil-get-terminal-size==1.0.0
 backports.tempfile==1.0
 backports.weakref==1.0.post1
+backports.zoneinfo==0.2.1
+bcrypt @ file:///C:/ci/bcrypt_1597936263757/work
+beautifulsoup4 @ file:///tmp/build/80754af9/beautifulsoup4_1601924105527/work
+billiard==4.2.0
+bitarray @ file:///C:/ci/bitarray_1605065210072/work
 bkcharts==0.2
+bleach @ file:///tmp/build/80754af9/bleach_1600439572647/work
+bokeh @ file:///C:/ci/bokeh_1603297934731/work
 boto==2.49.0
 Bottleneck==1.3.2
 brotlipy==0.7.0
+celery==5.3.6
 certifi==2020.6.20
+cffi @ file:///C:/ci/cffi_1600699246375/work
 chardet==3.0.4
-click==7.1.2
+click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
+cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1598884132938/work
 clyent==1.2.2
+colorama @ file:///tmp/build/80754af9/colorama_1603211150991/work
 comtypes==1.1.7
 conda==4.10.3
 conda-build==3.20.5
+conda-package-handling @ file:///C:/ci/conda-package-handling_1603003327818/work
 conda-verify==3.4.2
 contextlib2==0.6.0.post1
+cryptography @ file:///C:/ci/cryptography_1601046905460/work
 cycler==0.10.0
-
+Cython @ file:///C:/ci/cython_1594829190914/work
 cytoolz==0.11.0
-
+dask @ file:///tmp/build/80754af9/dask-core_1602083700509/work
 decorator==4.4.2
 defusedxml==0.6.0
-
+diff-match-patch @ file:///tmp/build/80754af9/diff-match-patch_1594828741838/work
+distributed @ file:///C:/ci/distributed_1605066635297/work
+Django @ file:///tmp/build/80754af9/django_1625585912945/work
 django-crispy-forms==1.13.0
+django-mathfilters==1.0.0
+django-sass-processor==1.1
+django-tempus-dominus==5.1.2.16
 djangorestframework==3.12.4
 docutils==0.16
 entrypoints==0.3
@@ -46,21 +76,30 @@ Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.5.1
 fsspec @ file:///tmp/build/80754af9/fsspec_1602684995936/work
 future==0.18.2
+fuzzywuzzy==0.18.0
 gevent @ file:///C:/ci/gevent_1601397627942/work
 glob2==0.7
 greenlet @ file:///C:/ci/greenlet_1600885448389/work
 h5py==2.10.0
 HeapDict==1.0.1
-
+html5lib @ file:///tmp/build/80754af9/html5lib_1593446221756/work
+idna @ file:///tmp/build/80754af9/idna_1593446292537/work
+imageio @ file:///tmp/build/80754af9/imageio_1594161405741/work
 imagesize==1.2.0
-
+importlib-metadata @ file:///tmp/build/80754af9/importlib-metadata_1602276842396/work
+iniconfig @ file:///tmp/build/80754af9/iniconfig_1602780191262/work
+intervaltree @ file:///tmp/build/80754af9/intervaltree_1598376443606/work
+ipykernel @ file:///C:/ci/ipykernel_1596190155316/work/dist/ipykernel-5.3.4-py3-none-any.whl
+ipython @ file:///C:/ci/ipython_1604083276484/work
 ipython_genutils==0.2.0
-
+ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1601490159889/work
+isort @ file:///tmp/build/80754af9/isort_1602603989581/work
 itsdangerous==1.1.0
 jdcal==1.4.1
 jedi @ file:///C:/ci/jedi_1592833825077/work
 Jinja2==2.11.2
 joblib @ file:///tmp/build/80754af9/joblib_1601912903842/work
+jquery.javascript==1.0.0
 json5==0.9.5
 jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
 jupyter==1.0.0
@@ -68,8 +107,13 @@ jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1601311786391/work
 jupyter-console @ file:///tmp/build/80754af9/jupyter_console_1598884538475/work
 jupyter-core==4.6.3
 jupyterlab==2.2.6
-
+jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
+jupyterlab-server @ file:///tmp/build/80754af9/jupyterlab_server_1594164409481/work
+keyring @ file:///C:/ci/keyring_1601489747083/work
+kiwisolver @ file:///C:/ci/kiwisolver_1604014703538/work
+kombu==5.3.4
 lazy-object-proxy==1.4.3
+Levenshtein==0.25.1
 libarchive-c==2.9
 llvmlite==0.34.0
 locket==0.2.0
@@ -86,6 +130,7 @@ mock==4.0.2
 more-itertools @ file:///tmp/build/80754af9/more-itertools_1605111547926/work
 mpmath==1.1.0
 msgpack==1.0.0
+multipart==0.2.4
 multipledispatch==0.6.0
 mysqlclient==2.0.3
 navigator-updater==0.2.1
@@ -122,7 +167,7 @@ pkginfo==1.6.1
 pluggy==0.13.1
 ply==3.11
 prometheus-client==0.8.0
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1602688806899/work
+prompt-toolkit==3.0.43
 psutil @ file:///C:/ci/psutil_1598370330503/work
 psycopg2 @ file:///C:/ci/psycopg2_1612298803839/work
 py @ file:///tmp/build/80754af9/py_1593446248552/work
@@ -144,9 +189,11 @@ pyreadline==2.1
 pyrsistent @ file:///C:/ci/pyrsistent_1600141795814/work
 PySocks==1.7.1
 pytest==6.0.1
-python-dateutil==2.8.1
+python-dateutil==2.8.2
+python-gettext==4.1
 python-jsonrpc-server @ file:///tmp/build/80754af9/python-jsonrpc-server_1600278539111/work
 python-language-server @ file:///tmp/build/80754af9/python-language-server_1600454544709/work
+python-Levenshtein==0.25.1
 pytz==2020.1
 PyWavelets @ file:///C:/ci/pywavelets_1601658407916/work
 pywin32==227
@@ -158,6 +205,7 @@ QDarkStyle==2.8.1
 QtAwesome @ file:///tmp/build/80754af9/qtawesome_1602272867890/work
 qtconsole @ file:///tmp/build/80754af9/qtconsole_1600870028330/work
 QtPy==1.9.0
+rapidfuzz==3.8.1
 regex @ file:///C:/ci/regex_1602770567298/work
 requests @ file:///tmp/build/80754af9/requests_1592841827918/work
 rope @ file:///tmp/build/80754af9/rope_1602264064449/work
@@ -202,10 +250,14 @@ toolz @ file:///tmp/build/80754af9/toolz_1601054250827/work
 tornado==6.0.4
 tqdm @ file:///tmp/build/80754af9/tqdm_1602185206534/work
 traitlets @ file:///tmp/build/80754af9/traitlets_1602787416690/work
-typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1598376058250/work
+transaction==3.0.1
+typing_extensions==4.9.0
+tzdata==2023.4
+tzlocal==5.2
 ujson @ file:///C:/ci/ujson_1602505266082/work
 unicodecsv==0.14.1
 urllib3 @ file:///tmp/build/80754af9/urllib3_1603305693037/work
+vine==5.1.0
 watchdog @ file:///C:/ci/watchdog_1593447437088/work
 wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
 webencodings==0.5.1
@@ -223,5 +275,26 @@ xmltodict==0.12.0
 yapf @ file:///tmp/build/80754af9/yapf_1593528177422/work
 zict==2.0.0
 zipp @ file:///tmp/build/80754af9/zipp_1604001098328/work
+zope.browser==2.4
+zope.browserpage==4.4.0
+zope.component==5.0.1
+zope.configuration==4.4.1
+zope.contentprovider==4.2.1
+zope.contenttype==4.6
+zope.deprecation==4.4.0
 zope.event==4.5.0
-zope.interface @ file:///C:/ci/zope.interface_1602002494740/work
+zope.exceptions==4.5
+zope.hookable==5.2
+zope.i18n==4.9.0
+zope.i18nmessageid==5.0.1
+zope.interface==5.4.0
+zope.location==4.2
+zope.pagetemplate==4.6.0
+zope.proxy==4.5.1
+zope.publisher==6.1.0
+zope.schema==6.2.1
+zope.security==5.4
+zope.tal==4.5
+zope.tales==5.2
+zope.traversing==4.4.1
+zope.viewlet==4.3
